Remove cursor pointer to fix blue bug on mobile devices

--- a/src/client/register/RegisterBody.css
+++ b/src/client/register/RegisterBody.css
@@ -70,7 +70,6 @@
     background-color: #656363;
     color: white;
     font-size: 1em;
-    cursor: pointer;
   }
 
   & .register-settings-container {
@@ -147,7 +146,6 @@
     font-size: 1em;
     background-color: var(--green-color);
     color: #fff;
-    cursor: pointer;
     margin-top: 20px;
     margin-bottom: 20px;
     width: 200px;
